sidebars change + add price

--- a/product.html
+++ b/product.html
@@ -84,6 +84,7 @@
                                 <dt>Описание:</dt>
                                 <dd itemprop='description'>Компрессорная головка служит для сжатия воздуха, взятого из атмосферы и нагнетания его непосредственно в ресивер, после чего сжатый воздух транспортируется по пневмопроводам к потребителям.</dd>
                             </dl>
+                            <span class="b-product__content__price">100 500</span>
                             <!--purchase button-->
                             <div class="b-purchase">
                                 <div>
@@ -126,7 +127,8 @@
                         <span class="b-counter__item">1</span>
                         <a href="#" class="control control__plus">+</a>
                     </div>
-                </div><!--end b-purchase-->
+                </div>
+              <span class="b-product__variations__price">100 500</span>
             </li>
             <!--one item-->
             <li class="item" itemscope itemtype='http://schema.org/Product'>
@@ -147,6 +149,7 @@
                         <a href="#" class="control control__plus">+</a>
                     </div>
                 </div><!--end b-purchase-->
+              <span class="b-product__variations__price">100 500</span>
             </li>
             <!--one item-->
             <li class="item" itemscope itemtype='http://schema.org/Product'>
@@ -167,6 +170,7 @@
                         <a href="#" class="control control__plus">+</a>
                     </div>
                 </div><!--end b-purchase-->
+              <span class="b-product__variations__price">100 500</span>
             </li>
             <!--one item-->
             <li class="item" itemscope itemtype='http://schema.org/Product'>
@@ -187,6 +191,7 @@
                         <a href="#" class="control control__plus">+</a>
                     </div>
                 </div><!--end b-purchase-->
+              <span class="b-product__variations__price">100 500</span>
             </li>
             <!--one item-->
             <li class="item" itemscope itemtype='http://schema.org/Product'>
@@ -207,6 +212,7 @@
                         <a href="#" class="control control__plus">+</a>
                     </div>
                 </div><!--end b-purchase-->
+              <span class="b-product__variations__price">100 500</span>
             </li>
         </ul><!--end product variation-->
 
@@ -280,11 +286,13 @@
 <footer class="l-pageFooter" itemscope itemtype='http://schema.org/WPFooter'>
     <nav class="b-ftrNav">
         <ul>
-            <li><a href="#" class="item">Поршневые компрессоры</a></li>
-            <li><a href="#" class="item">Осушители ОВ</a></li>
+            <li><a href="#" class="item active">Поршневые компрессоры</a></li>
             <li><a href="#" class="item">Запчасти</a></li>
-            <li><a href="#" class="item">Фильтры ФМ</a></li>
             <li><a href="#" class="item">Ремонт</a></li>
+            <li><a href="#" class="item">Обмен</a></li>
+            <li><a href="#" class="item">Аренда</a></li>
+            <li><a href="#" class="item">Осушители ОВ</a></li>
+            <li><a href="#" class="item">Фильтры ФМ</a></li>
             <li><a href="#" class="item">Контакты</a></li>
         </ul>
     </nav>
@@ -316,70 +324,79 @@
 </footer>
 <!-- END FOOTER -->
 
-<!--address vidget (on the top)-->
 <div class="b-adressVidget">
+  <a href="#" class="trigger"></a>
+  <div class="content">
+    <a href="#" class="close">✕</a>
     <address class="b-phone">
-        <p class="title">Телефоны:</p>
-        <div>
-            <p class="item">+7 (495) <b class="item__content">787 48 25</b></p>
-            <p class="item">+7 (495) <b class="item__content">787 56 00</b></p>
-        </div>
+      <p class="title">Телефоны:</p>
+      <div>
+        <p class="item">+7 (495) <b class="item__content">787 48 25</b></p>
+        <p class="item">+7 (495) <b class="item__content">787 56 00</b></p>
+      </div>
     </address>
     <address class="b-mailUs">
-        <p class="title">Эл.почта:</p>
-        <a class="item" href="mailto:info@b-compressor.ru">info@b-compressor.ru</a>
+      <p class="title">Эл.почта:</p>
+      <a class="item" href="mailto:info@b-compressor.ru">info@b-compressor.ru</a>
     </address>
+  </div>
 </div>
 
 <div class="b-shopcartVidget">
+  <a href="#" class="trigger"></a>
+  <div class="content">
+    <a href="#" class="close">✕</a>
     <form class="search">
-        <input type="search" placeholder="Поиск по сайту">
-        <button></button>
+      <input type="search" placeholder="Поиск по сайту">
+      <button></button>
     </form>
     <address class="l-jList b-phone">
-        <p class="title">Телефоны:</p>
-        <p class="item">+7 (495) <b class="item__content">787 48 25</b></p>
+      <p class="title">Телефоны:</p>
+      <p class="item">+7 (495) <b class="item__content">787 48 25</b></p>
     </address>
     <table class="table">
-        <tr>
-            <th>Ваш заказ</th>
-            <th>Цена</th>
-            <th>Кол-во</th>
-            <th>Сумма</th>
-        </tr>
-        <tr>
-            <td class="name"><a href="#">Картер <span class="model">C-415М.20.00.329</span></a></td>
-            <td class="price"><b>10425</b> руб.</td>
-            <td>
-                <div class="b-counter">
-                    <a href="#" class="control control__minus"><span>-</span></a>
-                    <span class="b-counter__item">1</span>
-                    <a href="#" class="control control__plus">+</a>
-                </div>
-            </td>
-            <td class="sum"><b>10425</b> руб.</td>
-        </tr>
-        <tr>
-            <td><a href="#">Картер <span class="name">C-415М.20.00.329</span></a></td>
-            <td class="price"><b>10425</b> руб.</td>
-            <td>
-                <div class="b-counter">
-                    <a href="#" class="control control__minus"><span>-</span></a>
-                    <span class="b-counter__item">1</span>
-                    <a href="#" class="control control__plus">+</a>
-                </div>
-            </td>
-            <td class="sum"><b>10425</b> руб.</td>
-        </tr>
+      <tr>
+        <th>Ваш заказ</th>
+        <th>Цена</th>
+        <th>Кол-во</th>
+        <th>Сумма</th>
+      </tr>
+      <tr>
+        <td><a href="#">Картер <span class="name">C-415М.20.00.329</span></a></td>
+        <td class="price"><b>10425</b> руб.</td>
+        <td>
+          <div class="b-counter">
+            <a href="#" class="control control__minus"><span>-</span></a>
+            <span class="b-counter__item">1</span>
+            <a href="#" class="control control__plus">+</a>
+          </div>
+        </td>
+        <td class="sum"><b>10425</b> руб.</td>
+      </tr>
+      <tr>
+        <td><a href="#">Картер <span class="name">C-415М.20.00.329</span></a></td>
+        <td class="price"><b>10425</b> руб.</td>
+        <td>
+          <div class="b-counter">
+            <a href="#" class="control control__minus"><span>-</span></a>
+            <span class="b-counter__item">1</span>
+            <a href="#" class="control control__plus">+</a>
+          </div>
+        </td>
+        <td class="sum"><b>10425</b> руб.</td>
+      </tr>
     </table>
     <div class="total">Итого:<b>24590 руб.</b></div>
     <a href="#" class="purchase">Оформить заказ</a>
+  </div>
 </div>
+
 
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.2.min.js"><\/script>')</script>
 <script src="js/main.js"></script>
+
 
 <!-- Asynchronous Google Analytics snippet. Change UA-XXXXX-X to be your site's ID.
 mathiasbynens.be/notes/async-analytics-snippet -->
