--- a/category.html
+++ b/category.html
@@ -84,7 +84,13 @@
                 </tfoot>
                 <tbody>
                     <tr>
-                        <td><a href="#">К-11</a></td>
+                        <td>
+                            <div class="b-counter">
+                                <a href="#" class="control control__minus"><span>-</span></a>
+                                <a class="name" href="#">К-11</a>
+                                <a href="#" class="control control__plus">+</a>
+                            </div>
+                        </td>
                         <td>П</td>
                         <td>+</td>
                         <td>160</td>
@@ -97,20 +103,13 @@
                         <td>25426</td>
                     </tr>
                     <tr>
-                        <td><a href="#">К-29-01</a></td>
-                        <td>П</td>
-                        <td>+</td>
-                        <td>160</td>
-                        <td>8</td>
-                        <td>22</td>
-                        <td>2,2</td>
-                        <td>380/3</td>
-                        <td>780х450х620</td>
-                        <td>75</td>
-                        <td>22676</td>
-                    </tr>
-                    <tr>
-                        <td><a href="#">К-11</a></td>
+                        <td>
+                            <div class="b-counter">
+                                <a href="#" class="control control__minus"><span>-</span></a>
+                                <a class="name" href="#">К-11</a>
+                                <a href="#" class="control control__plus">+</a>
+                            </div>
+                        </td>
                         <td>П</td>
                         <td>+</td>
                         <td>160</td>
@@ -123,20 +122,13 @@
                         <td>25426</td>
                     </tr>
                     <tr>
-                        <td><a href="#">К-29-01</a></td>
-                        <td>П</td>
-                        <td>+</td>
-                        <td>160</td>
-                        <td>8</td>
-                        <td>22</td>
-                        <td>2,2</td>
-                        <td>380/3</td>
-                        <td>780х450х620</td>
-                        <td>75</td>
-                        <td>22676</td>
-                    </tr>
-                    <tr>
-                        <td><a href="#">К-11</a></td>
+                        <td>
+                            <div class="b-counter">
+                                <a href="#" class="control control__minus"><span>-</span></a>
+                                <a class="name" href="#">К-11</a>
+                                <a href="#" class="control control__plus">+</a>
+                            </div>
+                        </td>
                         <td>П</td>
                         <td>+</td>
                         <td>160</td>
@@ -149,20 +141,13 @@
                         <td>25426</td>
                     </tr>
                     <tr>
-                        <td><a href="#">К-29-01</a></td>
-                        <td>П</td>
-                        <td>+</td>
-                        <td>160</td>
-                        <td>8</td>
-                        <td>22</td>
-                        <td>2,2</td>
-                        <td>380/3</td>
-                        <td>780х450х620</td>
-                        <td>75</td>
-                        <td>22676</td>
-                    </tr>
-                    <tr>
-                        <td><a href="#">К-11</a></td>
+                        <td>
+                            <div class="b-counter">
+                                <a href="#" class="control control__minus"><span>-</span></a>
+                                <a class="name" href="#">К-11</a>
+                                <a href="#" class="control control__plus">+</a>
+                            </div>
+                        </td>
                         <td>П</td>
                         <td>+</td>
                         <td>160</td>
@@ -175,20 +160,13 @@
                         <td>25426</td>
                     </tr>
                     <tr>
-                        <td><a href="#">К-29-01</a></td>
-                        <td>П</td>
-                        <td>+</td>
-                        <td>160</td>
-                        <td>8</td>
-                        <td>22</td>
-                        <td>2,2</td>
-                        <td>380/3</td>
-                        <td>780х450х620</td>
-                        <td>75</td>
-                        <td>22676</td>
-                    </tr>
-                    <tr>
-                        <td><a href="#">К-11</a></td>
+                        <td>
+                            <div class="b-counter">
+                                <a href="#" class="control control__minus"><span>-</span></a>
+                                <a class="name" href="#">К-11</a>
+                                <a href="#" class="control control__plus">+</a>
+                            </div>
+                        </td>
                         <td>П</td>
                         <td>+</td>
                         <td>160</td>
@@ -201,20 +179,13 @@
                         <td>25426</td>
                     </tr>
                     <tr>
-                        <td><a href="#">К-29-01</a></td>
-                        <td>П</td>
-                        <td>+</td>
-                        <td>160</td>
-                        <td>8</td>
-                        <td>22</td>
-                        <td>2,2</td>
-                        <td>380/3</td>
-                        <td>780х450х620</td>
-                        <td>75</td>
-                        <td>22676</td>
-                    </tr>
-                    <tr>
-                        <td><a href="#">К-11</a></td>
+                        <td>
+                            <div class="b-counter">
+                                <a href="#" class="control control__minus"><span>-</span></a>
+                                <a class="name" href="#">К-11</a>
+                                <a href="#" class="control control__plus">+</a>
+                            </div>
+                        </td>
                         <td>П</td>
                         <td>+</td>
                         <td>160</td>
@@ -225,19 +196,6 @@
                         <td>1000х470х800</td>
                         <td>95</td>
                         <td>25426</td>
-                    </tr>
-                    <tr>
-                        <td><a href="#">К-29-01</a></td>
-                        <td>П</td>
-                        <td>+</td>
-                        <td>160</td>
-                        <td>8</td>
-                        <td>22</td>
-                        <td>2,2</td>
-                        <td>380/3</td>
-                        <td>780х450х620</td>
-                        <td>75</td>
-                        <td>22676</td>
                     </tr>
                 </tbody>
             </table>
@@ -249,11 +207,13 @@
 <footer class="l-pageFooter" itemscope itemtype='http://schema.org/WPFooter'>
     <nav class="b-ftrNav">
         <ul>
-            <li><a href="#" class="item">Поршневые компрессоры</a></li>
-            <li><a href="#" class="item">Осушители ОВ</a></li>
+            <li><a href="#" class="item active">Поршневые компрессоры</a></li>
             <li><a href="#" class="item">Запчасти</a></li>
-            <li><a href="#" class="item">Фильтры ФМ</a></li>
             <li><a href="#" class="item">Ремонт</a></li>
+            <li><a href="#" class="item">Обмен</a></li>
+            <li><a href="#" class="item">Аренда</a></li>
+            <li><a href="#" class="item">Осушители ОВ</a></li>
+            <li><a href="#" class="item">Фильтры ФМ</a></li>
             <li><a href="#" class="item">Контакты</a></li>
         </ul>
     </nav>
@@ -285,8 +245,10 @@
 </footer>
 <!-- END FOOTER -->
 
-<!--address vidget (on the top)-->
 <div class="b-adressVidget">
+  <a href="#" class="trigger"></a>
+  <div class="content">
+    <a href="#" class="close">✕</a>
     <address class="b-phone">
         <p class="title">Телефоны:</p>
         <div>
@@ -298,9 +260,13 @@
         <p class="title">Эл.почта:</p>
         <a class="item" href="mailto:info@b-compressor.ru">info@b-compressor.ru</a>
     </address>
+  </div>
 </div>
 
 <div class="b-shopcartVidget">
+  <a href="#" class="trigger"></a>
+  <div class="content">
+    <a href="#" class="close">✕</a>
     <form class="search">
         <input type="search" placeholder="Поиск по сайту">
         <button></button>
@@ -317,7 +283,7 @@
             <th>Сумма</th>
         </tr>
         <tr>
-            <td class="name"><a href="#">Картер <span class="model">C-415М.20.00.329</span></a></td>
+            <td><a href="#">Картер <span class="name">C-415М.20.00.329</span></a></td>
             <td class="price"><b>10425</b> руб.</td>
             <td>
                 <div class="b-counter">
@@ -343,6 +309,7 @@
     </table>
     <div class="total">Итого:<b>24590 руб.</b></div>
     <a href="#" class="purchase">Оформить заказ</a>
+  </div>
 </div>
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
